--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -1,9 +1,9 @@
 name: Build and Convert Filters
 
 on:
-  workflow_dispatch:  
+  workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *' 
+    - cron: '0 0 * * *'
   push:
     branches:
       - main
@@ -22,25 +22,43 @@ jobs:
           sudo apt-get install -y python3 python3-pip
           python3 -m pip install requests
 
+      - name: Get Latest Sing-box Release
+        id: get_latest_release
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const result = await github.rest.repos.getLatestRelease({
+              owner: 'SagerNet',
+              repo: 'sing-box',
+            });
+            return result.data.tag_name;
+
       - name: Download and Extract Sing-box
         run: |
-          wget -O sing-box.tar.gz https://github.com/SagerNet/sing-box/releases/download/v1.11.4/sing-box-1.11.4-linux-amd64.tar.gz
-          tar -xzvf sing-box.tar.gz
-          chmod +x ./sing-box-1.11.4-linux-amd64/sing-box
+          VERSION=${{ steps.get_latest_release.outputs.result }}
+          VERSION_NUMBER="${VERSION:1}"
+          SING_BOX_DIR="./sing-box-${VERSION_NUMBER}-linux-amd64"
+          wget -O sing-box.tar.gz https://github.com/SagerNet/sing-box/releases/download/${VERSION}/sing-box-${VERSION_NUMBER}-linux-amd64.tar.gz || exit 1
+          tar -xzvf sing-box.tar.gz || exit 1
+          chmod +x "${SING_BOX_DIR}/sing-box"
 
       - name: Run Python Script
         run: python3 run.py
 
       - name: Convert Using Sing-box
         run: |
-          ./sing-box-1.11.4-linux-amd64/sing-box rule-set convert --type adguard --output geosite-dnsblock.srs ./temp_filters.txt
+          VERSION=${{ steps.get_latest_release.outputs.result }}
+          VERSION_NUMBER="${VERSION:1}"
+          SING_BOX_DIR="./sing-box-${VERSION_NUMBER}-linux-amd64"
+          "${SING_BOX_DIR}/sing-box" rule-set convert --type adguard --output geosite-dnsblock.srs ./temp_filters.txt
 
       - name: Commit geosite-dnsblock.srs to Root Directory
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add geosite-dnsblock.srs
-          git commit -m "Update geosite-dnsblock.srs" || echo "No changes to commit"
+          git commit -m "Update geosite-dnsblock.srs (using ${{ steps.get_latest_release.outputs.result }})" || echo "No changes to commit"
           git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
